--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@
 name = jpack
 description = Add a short description here!
 author = Stefan Weissenberger
-author-email = weissenberger.stefan@bcg.com
+author-email = weissenberger.stefan@gmx.net
 license = mit
 long-description = file: README.rst
 long-description-content-type = text/x-rst; charset=UTF-8
